--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
     </section><!-- End Our Clients Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="section-bg">
+  <!-- <section id="testimonials" class="section-bg">
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
@@ -653,10 +653,11 @@
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section>-->
+	<!-- End Testimonials Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team">
+    <!--<section id="team">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h3>Team</h3>
@@ -740,7 +741,7 @@
         </div>
 
       </div>
-    </section><!-- End Team Section -->
+    </section>--><!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
